Gtk-3.20&3.22&3.24: [GtkProgressBar] Fix shifted entry-progressbar

--- a/gtk/sass/3.24/_common.scss
+++ b/gtk/sass/3.24/_common.scss
@@ -4149,13 +4149,13 @@ progressbar {
 }
 
 %entry_progressbar { // progress inside entry
-  margin: -10px -6px;
+  margin: rem(-10px) rem(-8px);
   border-style: none none solid;
   border-width: 2px;
   border-image: -gtk-gradient(radial,
                               center bottom, 0,
                               center bottom, 0.5,
-                              to($accent_color),
+                              to($warning_color),
                               to(transparent))
                               0 0 2 / 0 0 2px;
   border-radius: 0;
